Add cloud deployment optimization for HuggingFace models
- Add DISABLE_HF environment variable to skip HF model loading
- When DISABLE_HF=true, use rule-based summaries only
- Significantly reduces memory usage and startup time on Render
- Update frontend labels to indicate cloud vs local optimization
- Groq API remains primary summarizer for production deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,8 +19,8 @@
                 <div class="upload-controls">
                     <input type="file" id="fileInput" accept=".json" />
                     <select id="summarizerSelect">
-                        <option value="groq">Groq (Llama 3.1 8B)</option>
-                        <option value="huggingface">HuggingFace (BART)</option>
+                        <option value="groq">Groq (Llama 3.1 8B) - Cloud Optimized</option>
+                        <option value="huggingface">HuggingFace (BART) - Local Only</option>
                     </select>
                     <button id="summarizeBtn" onclick="handleSummarize()">
                         Generate Summaries
