--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,7 +52,10 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:8000';
+        // Use local backend for development, proxy for production
+        const API_BASE = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' 
+            ? 'http://localhost:8000' 
+            : '/api';
         let currentData = null;
 
         async function handleSummarize() {
